--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <meta charset="UTF-8">
 <title>Asistencia RRHH</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#2E7D32">
+<meta name="theme-color" content="#E4002B">
 
 <script src="https://unpkg.com/html5-qrcode"></script>
 
 <style>
 :root{
+  --adecco:#E4002B;
+  --adecco-dark:#B30022;
+
   --green:#2E7D32;
   --green-dark:#1B5E20;
+
   --yellow:#F9A825;
   --yellow-dark:#F57F17;
+
   --gray:#F4F5F7;
-  --gray-dark:#2F2F2F;
-  --card:#FFFFFF;
   --text:#1F2937;
   --muted:#6B7280;
 }
@@ -44,8 +47,10 @@ body{
 
 /* LOGO */
 .logo{
-  font-size:30px;font-weight:800;
-  color:var(--green);margin-bottom:20px;
+  font-size:30px;
+  font-weight:900;
+  color:var(--adecco);
+  margin-bottom:20px;
 }
 
 /* INPUT */
@@ -56,8 +61,8 @@ input{
   margin-bottom:16px;
 }
 input:focus{
-  outline:none;border-color:var(--green);
-  box-shadow:0 0 0 3px rgba(46,125,50,.18);
+  outline:none;border-color:var(--adecco);
+  box-shadow:0 0 0 3px rgba(228,0,43,.18);
 }
 
 /* BUTTONS */
@@ -69,10 +74,11 @@ button{
 }
 button:hover{transform:translateY(-2px)}
 
+/* BUSCAR */
 .btn{
-  background:linear-gradient(180deg,var(--green),var(--green-dark));
+  background:linear-gradient(180deg,var(--adecco),var(--adecco-dark));
   color:#fff;
-  box-shadow:0 14px 28px rgba(46,125,50,.45);
+  box-shadow:0 14px 28px rgba(228,0,43,.45);
 }
 
 /* ENTRADA */
@@ -89,11 +95,26 @@ button:hover{transform:translateY(-2px)}
   box-shadow:0 14px 28px rgba(249,168,37,.45);
 }
 
-/* FOTO */
+/* FOTO CON MARCO */
 .foto{
-  width:120px;height:120px;border-radius:20px;
-  object-fit:cover;margin:14px auto;
-  box-shadow:0 10px 22px rgba(0,0,0,.25);
+  width:120px;height:120px;
+  border-radius:22px;
+  object-fit:cover;
+  margin:14px auto;
+  border:4px solid var(--adecco);
+  box-shadow:0 12px 26px rgba(228,0,43,.35);
+}
+
+/* RELOJ */
+.reloj{
+  margin-top:8px;
+  font-weight:700;
+  color:var(--text);
+}
+.fecha{
+  font-size:14px;
+  color:var(--muted);
+  margin-bottom:14px;
 }
 
 /* MODAL */
@@ -105,7 +126,7 @@ button:hover{transform:translateY(-2px)}
   z-index:10;
 }
 
-/* CONFIRM / ERROR */
+/* CONFIRM */
 .confirm{
   background:#fff;padding:36px;border-radius:28px;
   text-align:center;width:85%;max-width:320px;
@@ -114,7 +135,7 @@ button:hover{transform:translateY(-2px)}
 }
 @keyframes pop{
   from{opacity:0;transform:scale(.85)}
-  to{opacity:1;transform:scale(1)}
+  to{opacity:1}
 }
 
 /* CHECK */
@@ -133,54 +154,37 @@ button:hover{transform:translateY(-2px)}
 }
 @keyframes draw{to{stroke-dashoffset:0}}
 
-/* CHECK COLORS */
+/* COLORES CONFIRM */
 .confirm.entrada .check,
 .confirm.entrada svg{
   border-color:var(--green);
   stroke:var(--green);
 }
-
 .confirm.salida .check,
 .confirm.salida svg{
   border-color:var(--yellow);
   stroke:var(--yellow);
 }
 
-/* ERROR */
-.confirm.error{
-  animation:shake .45s ease;
-}
-.confirm.error .check,
-.confirm.error svg{
-  border-color:#C62828;
-  stroke:#C62828;
-}
-@keyframes shake{
-  0%{transform:translateX(0)}
-  25%{transform:translateX(-6px)}
-  50%{transform:translateX(6px)}
-  75%{transform:translateX(-4px)}
-  100%{transform:none}
-}
-
+/* BADGE */
 .badge{
   padding:10px 18px;border-radius:20px;
   font-weight:700;
 }
 .confirm.entrada .badge{background:var(--green);color:#fff}
 .confirm.salida .badge{background:var(--yellow);color:#000}
-.confirm.error .badge{background:#C62828;color:#fff}
 
 /* LOADER */
 #loader{
   display:none;position:fixed;inset:0;
-  background:rgba(255,255,255,.7);
+  background:rgba(255,255,255,.75);
   justify-content:center;align-items:center;
   z-index:20;
 }
 .spinner{
   width:48px;height:48px;border-radius:50%;
-  border:4px solid #ddd;border-top:4px solid var(--green);
+  border:4px solid #ddd;
+  border-top:4px solid var(--adecco);
   animation:spin 1s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
@@ -205,19 +209,6 @@ button:hover{transform:translateY(-2px)}
   </div>
 </div>
 
-<!-- ERROR -->
-<div id="errorModal" class="modal">
-  <div class="confirm error">
-    <div class="check">
-      <svg viewBox="0 0 52 52">
-        <path d="M16 16 L36 36 M36 16 L16 36"/>
-      </svg>
-    </div>
-    <div id="errorTexto" class="badge"></div><br>
-    <button class="btn-exit" onclick="cerrarError()">Aceptar</button>
-  </div>
-</div>
-
 <!-- QR -->
 <div id="qrModal" class="modal">
   <div class="card">
@@ -227,7 +218,6 @@ button:hover{transform:translateY(-2px)}
   </div>
 </div>
 
-<!-- CARD -->
 <div class="card">
   <div class="logo">Asistencia ADECCO</div>
 
@@ -240,7 +230,11 @@ button:hover{transform:translateY(-2px)}
   <div id="p2" style="display:none">
     <img id="foto" class="foto">
     <h3 id="nombre"></h3>
-    <p id="cargo" style="color:var(--muted)"></p><br>
+    <p id="cargo" style="color:var(--muted)"></p>
+
+    <div class="reloj" id="hora"></div>
+    <div class="fecha" id="fecha"></div>
+
     <button class="btn-entry" onclick="abrirQR('ENTRADA')">ENTRADA</button><br><br>
     <button class="btn-exit" onclick="abrirQR('SALIDA')">SALIDA</button>
   </div>
@@ -262,11 +256,13 @@ function buscar(){
   .then(r=>{
     if(!r.ok)return mostrarError(r.mensaje);
     trabajador=r.data;
-    p1.style.display="none";p2.style.display="block";
+    p1.style.display="none";
+    p2.style.display="block";
     nombre.innerText=trabajador.nombre;
     cargo.innerText=trabajador.cargo;
     foto.src=trabajador.foto||"https://via.placeholder.com/120";
-  }).finally(()=>loader.style.display="none");
+  })
+  .finally(()=>loader.style.display="none");
 }
 
 function abrirQR(t){
@@ -282,7 +278,10 @@ function abrirQR(t){
     registrar();
   });
 }
-function cerrarQR(){qrModal.style.display="none";qr?.stop().catch(()=>{})}
+function cerrarQR(){
+  qrModal.style.display="none";
+  qr?.stop().catch(()=>{});
+}
 
 function registrar(){
   loader.style.display="flex";
@@ -300,26 +299,27 @@ function registrar(){
     .then(r=>r.json())
     .then(r=>{
       loader.style.display="none";
-      if(!r.ok){bloqueado=false;return mostrarError(r.mensaje);}
       mostrarConfirmacion(tipoActual,r.mensaje);
       setTimeout(()=>location.reload(),2200);
     });
-  },()=>mostrarError("No se pudo obtener la ubicación"));
+  });
 }
 
-/* ===== UI ===== */
+/* CONFIRM */
 function mostrarConfirmacion(tipo,msg){
   confirmBox.className="confirm "+(tipo==="ENTRADA"?"entrada":"salida");
   badgeTexto.innerText=msg;
   confirmacion.style.display="flex";
 }
-function mostrarError(msg){
-  errorTexto.innerText=msg;
-  errorModal.style.display="flex";
+
+/* RELOJ */
+function actualizarReloj(){
+  const f=new Date();
+  hora.innerText=f.toLocaleTimeString();
+  fecha.innerText=f.toLocaleDateString("es-PE",{weekday:"long",day:"numeric",month:"long",year:"numeric"});
 }
-function cerrarError(){
-  errorModal.style.display="none";
-}
+setInterval(actualizarReloj,1000);
+actualizarReloj();
 </script>
 
 </body>
